-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 24, repo-shenandoah
-
Component/s: hotspot
-
b19
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8342025 | 23.0.2 | William Kemper | P4 | Resolved | Fixed | b03 |
Stack traces in incremental build show shenandoahSimpleBitMap calling a function with the same name defined in bitMap.cpp:
#8 0x7f5e08a2c4d4 in tail_mask(unsigned long) src/hotspot/share/utilities/bitMap.cpp:431
#9 0x7f5e0a951144 in ShenandoahSimpleBitMap::count_trailing_ones(long) const src/hotspot/share/gc/shenandoah/shenandoahSimpleBitMap.cpp:75
#10 0x7f5e0a951b42 in ShenandoahSimpleBitMap::find_first_consecutive_set_bits(long, long, unsigned long) const src/hotspot/share/gc/shenandoah/shenandoahSimpleBitMap.cpp:215
- backported by
-
JDK-8342025 Shenandoah: assert(tail_bits < (idx_t)BitsPerWord) failed: precondition
-
- Resolved
-
- relates to
-
JDK-8332697 ubsan: shenandoahSimpleBitMap.inline.hpp:68:23: runtime error: signed integer overflow: -9223372036854775808 - 1 cannot be represented in type 'long int'
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk23u/9fdcee9d
-
Commit(master)
openjdk/jdk/45a63595
-
Commit(master)
openjdk/shenandoah-jdk21u/ae9173c0
-
Review(master)
openjdk/jdk23u/135
-
Review(master)
openjdk/jdk/21395
-
Review(master)
openjdk/shenandoah-jdk21u/122