8341668: Shenandoah: assert(tail_bits < (idx_t)BitsPerWord) failed: precondition

Reviewed-by: ysr